ansible-playbook/roles/kubernetes-app/network-policy/pro-allow-stag.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: production-allow-staging
  namespace: staging
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: production 
    - podSelector: {}
