ansible-playbook/roles/kubernetes-app/network-policy/stag-deny-pro.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: production
  name: staging-deny-production
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
